added room creation ui with validation

--- a/style.css
+++ b/style.css
@@ -10,3 +10,30 @@ body
     margin: 0;
 }
 
+.d_flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 100%;
+}
+
+#ui {
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    background-color: #000;
+    overflow: hidden;
+    opacity: 0.8;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+}
+
+.main_title {
+    font-size: 3rem;
+    font-weight: 700;
+    text-align: center;
+    position: relative;
+    top: 150px;
+}
