--- a/style.css
+++ b/style.css
@@ -23,7 +23,21 @@ body
     color: #fff;
     background-color: #000;
     overflow: hidden;
-    opacity: 0.8;
+    opacity: 1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+}
+
+#waiting_room {
+    display: none;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    background-color: #000;
+    overflow: hidden;
+    opacity: 1;
     position: fixed;
     top: 0;
     left: 0;
