--- a/style.css
+++ b/style.css
@@ -45,9 +45,12 @@ body
 }
 
 .main_title {
-    font-size: 3rem;
     font-weight: 700;
     text-align: center;
     position: relative;
     top: 150px;
+}
+
+.main_title h1 {
+    font-size: 3rem;
 }
