--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ input {
     margin: 0 20px;
 }
 #join_game_ui, #create_game_ui {
+    position: relative;
     display: none;
     background-color: rgba(240, 255, 255, 0.6);
     width: 100%;
@@ -133,6 +134,14 @@ input {
     color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s ease;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    max-width: 30px;
 }
 
 #spell_bar {
